test/statements/typeselect/deprecateTypeSelect.good
deprecateTypeSelect.chpl:1: error: 'type select' is no longer supported. Use 'select'
