test/statements/typeselect/deprecateTypeSelect.chpl
type select 5 {
  when int do writeln("int");
}
